# Autonomous-Docking-Using-ArUco-Markers-in-ROS2

./: README.md  SUMMARY_REPORT.md  test_bot.urdf
aruco_docking/: package.xml  setup.cfg  setup.py
src/aruco_detector/: package.xml  setup.py
src/aruco_detector/aruco_detector/: aruco_detector.py
src/robot_description/: CMakeLists.txt  package.xml  setup.py
src/robot_description/robot_description/launch/: display_diffbot.launch.py
src/robot_description/robot_description/rviz/: diffbot.rviz
src/robot_description/robot_description/urdf/: diffbot.urdf
