<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schemaVersion="3.0"?>
<package format="3">
  <name>robot_description</name>
  <version>1.0.0</version>
  <description>URDF description and launch files for diffbot robot</description>
  <maintainer email="https://github.com/kkskyskrull">Krishna karthik vallam</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
